<resources>
    <string name="app_name">Teste Juh</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_led_control">ledControl</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_dev">Sobre o desenvolvedor</string>
    <string name="content_descrip_dev_photo">FOTO DO DESENVOLVEDOR</string>
    <string name="im_dev">Eu sou o DEV</string>
    <string name="content_descrip_share_facebook">Compartilhar no facebook</string>
    <string name="content_descrip_share_twitter">Compatilhar no twitter</string>
    <string name="content_descrip_share_wordpress">Compartilhar Wordpress</string>
    <string name="content_descrip_share_instagram">Compartilhar no instagram</string>
    <string name="dispositivos_pareados">Dispositivos pareados</string>
    <string name="dispostivos_dispon_veis">Dispostivos disponíveis</string>
    <string name="digite_seu_codigo">Digite seu código</string>
    <string name="comandos_testes">Comandos: testes disponíveis</string>
    <string name="string_tests_escolha">ESCOLHA SUA TELA:</string>
    <string name="string_tests_lista_dispositivos">Lista de dispositivos</string>
    <string name="string_tests_comandos">Comandos</string>
    <string name="tests_testes_layout">Testes de Layout</string>
    <string name="enviar">Enviar</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="cancel">Cancelar</string>
    <string name="finalizar">Finalizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
