<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sirtprojects.testejuh.LayoutActivity"
    android:background="#fff"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/relative_layout_title_ledControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comandos_testes"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#f44336"
            android:textSize="23sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/relative_layout_title_ledControl"
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/on_btn"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            android:textColor="#212121"
            android:textSize="30sp"
            android:text="@string/enviar"/>

        <EditText
            android:id="@+id/edit_text_code"
            android:layout_below="@id/off_btn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_seu_codigo"
            android:inputType="text"
            android:textAllCaps="true"
            android:focusable="false"/>

        <Button
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:textColor="#212121"
            android:id="@+id/off_btn"
            android:fontFamily="sans-serif-smallcaps"
            android:text="02"
            android:textSize="30sp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="500dp"
            android:fontFamily="sans-serif-smallcaps"
            android:fadingEdge="none"
            android:textColor="#212121"
            android:id="@+id/dis_btn"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            tools:text="DISCONNECT"
            tools:typeface="monospace" />

        <Button
            android:id="@+id/abt_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:textColor="#212121"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_alignTop="@+id/dis_btn"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            tools:text="ABOUT"
            tools:typeface="monospace" />

    </RelativeLayout>

</RelativeLayout>
